<resources>
    <string name="app_name" translatable="false">Driv\'N Cook</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password:</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="info">Info</string>
    <string name="errorMessage">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="noInternet">No Internet connection</string>
    <string name="required">Required</string>
    <string name="incorrect">Incorrect</string>
    <string name="noFidelity">No fidelity card found</string>
    <string name="idFidelity">"ID of the fidelity card: "</string>
    <string name="fidelityPoints">"Number of points of the fidelity card: "</string>
    <string name="id">ID</string>
    <string name="points">Points</string>
    <string name="fidelityDetails">Avantages</string>
    <string name="subscribe">Subscribe to a fidelity card</string>
    <string name="congrat">Congratulations! You just have subscribed to our fidelity progam</string>
</resources>